# rust_graphql

./: Cargo.toml  README.md
src/: db.rs  main.rs  models.rs  schema.rs
