[package]
name = "rust_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.2"
juniper_rocket = "0.5.2"
rocket = "0.4.5"
chrono = { version = "0.4.15", features=["serde"] } 
csv = "1.1" 
serde = { version = "1.0", features = ["derive"] }